part2/2_1/manifests/service-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-kub-main-app-2-1-svc
spec:
  type: ClusterIP
  selector:
    app: dev-kub-main-app-2-1
  ports:
    - name: main-app
      port: 2345
      protocol: TCP
      targetPort: 3000
