part2/2_1/manifests/service-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong
spec:
  type: ClusterIP
  selector:
    app: dev-kub-pingpong-2-1
  ports:
    - name: pingpong
      port: 3001
      protocol: TCP
      targetPort: 3001
